--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@netlify/angular-runtime": "^2.4.0",
     "@tailwindcss/postcss": "^4.1.11",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
